--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="image-container">
-                    <img src="./images/img1.png" alt="国家医保服务平台界面" class="guide-image">
+                    <img src="https://jsd.cdn.zzko.cn/gh/LZHMS/picx-images-hosting@master/EBlog/Life/img1.5q7w0t0eby.webp" alt="国家医保服务平台界面" class="guide-image">
                 </div>
             </div>
 
@@ -175,44 +175,44 @@
                     <div class="department-category">
                         <h3 class="category-title">内科类</h3>
                         <div class="department-list">
-                            <button class="btn-department">内科</button>
-                            <button class="btn-department">全科医学科</button>
-                            <button class="btn-department">儿科</button>
-                            <button class="btn-department">妇科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('内科')">内科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('全科医学科')">全科医学科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('儿科')">儿科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('妇科')">妇科</button>
                         </div>
                     </div>
 
                     <div class="department-category">
                         <h3 class="category-title">外科类</h3>
                         <div class="department-list">
-                            <button class="btn-department">骨伤科</button>
-                            <button class="btn-department">外科</button>
-                            <button class="btn-department">肛肠科</button>
-                            <button class="btn-department">皮肤科</button>
-                            <button class="btn-department">眼科</button>
-                            <button class="btn-department">耳鼻喉科</button>
-                            <button class="btn-department">口腔科</button>
-                            <button class="btn-department">产科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('骨伤科')">骨伤科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('外科')">外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('肛肠科')">肛肠科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('皮肤科')">皮肤科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('眼科')">眼科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('耳鼻喉科')">耳鼻喉科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('口腔科')">口腔科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('产科')">产科</button>
                         </div>
                     </div>
 
                     <div class="department-category">
                         <h3 class="category-title">检查类</h3>
                         <div class="department-list">
-                            <button class="btn-department">心电图</button>
-                            <button class="btn-department">脑电图</button>
-                            <button class="btn-department">肌电图</button>
-                            <button class="btn-department">TCD室(经颅多普勒超声)</button>
-                            <button class="btn-department">胃肠镜室</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('心电图')">心电图</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('脑电图')">脑电图</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('肌电图')">肌电图</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('TCD室(经颅多普勒超声)')">TCD室(经颅多普勒超声)</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('胃肠镜室')">胃肠镜室</button>
                         </div>
                     </div>
 
                     <div class="department-category">
                         <h3 class="category-title">其他</h3>
                         <div class="department-list">
-                            <button class="btn-department">药房</button>
-                            <button class="btn-department">挂号收费处</button>
-                            <button class="btn-department">客户服务中心</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('药房')">药房</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('挂号收费处')">挂号收费处</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('客户服务中心')">客户服务中心</button>
                         </div>
                     </div>
                 </div>
@@ -226,46 +226,46 @@
                     <div class="department-category">
                         <h3 class="category-title">内科类</h3>
                         <div class="department-list">
-                            <button class="btn-department">内科</button>
-                            <button class="btn-department">神经内科</button>
-                            <button class="btn-department">妇科</button>
-                            <button class="btn-department">妇科内分泌科</button>
-                            <button class="btn-department">儿科</button>
-                            <button class="btn-department">营养门诊</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('内科')">内科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('神经内科')">神经内科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('妇科')">妇科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('妇科内分泌科')">妇科内分泌科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('儿科')">儿科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('营养门诊')">营养门诊</button>
                         </div>
                     </div>
 
                     <div class="department-category">
                         <h3 class="category-title">外科类</h3>
                         <div class="department-list">
-                            <button class="btn-department">外科</button>
-                            <button class="btn-department">泌尿外科</button>
-                            <button class="btn-department">眼科</button>
-                            <button class="btn-department">美容整形外科</button>
-                            <button class="btn-department">耳鼻咽喉科</button>
-                            <button class="btn-department">皮肤科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('外科')">外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('泌尿外科')">泌尿外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('眼科')">眼科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('美容整形外科')">美容整形外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('耳鼻咽喉科')">耳鼻咽喉科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('皮肤科')">皮肤科</button>
                         </div>
                     </div>
 
                     <div class="department-category">
                         <h3 class="category-title">检查类</h3>
                         <div class="department-list">
-                            <button class="btn-department">急诊CT/X线</button>
-                            <button class="btn-department">妇科超声室</button>
-                            <button class="btn-department">检验科</button>
-                            <button class="btn-department">生殖彩超室</button>
-                            <button class="btn-department">操作治疗区(抽血、换药、注射、雾化)</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('急诊CT/X线')">急诊CT/X线</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('妇科超声室')">妇科超声室</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('检验科')">检验科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('生殖彩超室')">生殖彩超室</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('操作治疗区(抽血、换药、注射、雾化)')">操作治疗区(抽血、换药、注射、雾化)</button>
                         </div>
                     </div>
 
                     <div class="department-category">
                         <h3 class="category-title">其他</h3>
                         <div class="department-list">
-                            <button class="btn-department">门诊便民服务中心</button>
-                            <button class="btn-department">国际医疗部</button>
-                            <button class="btn-department">收费处</button>
-                            <button class="btn-department">中药房</button>
-                            <button class="btn-department">西药房</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('门诊便民服务中心')">门诊便民服务中心</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('国际医疗部')">国际医疗部</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('收费处')">收费处</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('中药房')">中药房</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('西药房')">西药房</button>
                         </div>
                     </div>
                 </div>
