--- a/index.html
+++ b/index.html
@@ -497,6 +497,12 @@
         </div>
     </div>
 
+    <!-- Lightbox 图片放大预览 -->
+    <div id="lightbox" class="lightbox-modal">
+        <span class="lightbox-close">&times;</span>
+        <img class="lightbox-content" src="" alt="预览图">
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
