update the images path

--- a/index.html
+++ b/index.html
@@ -223,6 +223,72 @@
                 </div>
             </div>
 
+            <!-- 北京大学深圳医院科室 -->
+            <div id="hospital3" class="hospital-departments" style="display: none;">
+                <div class="card">
+                    <h2 class="section-title">科室选择</h2>
+                    
+                    <div class="department-category">
+                        <h3 class="category-title">内科类</h3>
+                        <div class="department-list">
+                            <button class="btn-department" onclick="showDepartmentDetail('心血管内科')">心血管内科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('内分泌科')">内分泌科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('风湿免疫科')">风湿免疫科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('肿瘤内科')">肿瘤内科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('肾内科')">肾内科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('老年医学科')">老年医学科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('血液内科')">血液内科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('神经内科')">神经内科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('儿科')">儿科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('综合诊区')">综合诊区</button>
+                        </div>
+                    </div>
+
+                    <div class="department-category">
+                        <h3 class="category-title">外科类</h3>
+                        <div class="department-list">
+                            <button class="btn-department" onclick="showDepartmentDetail('胸外科')">胸外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('肝胆胰外科')">肝胆胰外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('显微淋巴外科')">显微淋巴外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('神经外科')">神经外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('心血管外科')">心血管外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('乳腺甲状腺外科')">乳腺甲状腺外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('脊柱外科')">脊柱外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('骨关节科')">骨关节科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('超声介入科')">超声介入科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('胃肠外科')">胃肠外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('运动医学科')">运动医学科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('手足与血管外科')">手足与血管外科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('眼科')">眼科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('耳鼻喉科')">耳鼻喉科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('妇科诊区')">妇科诊区</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('皮肤科')">皮肤科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('美容整形外科')">美容整形外科</button>
+                        </div>
+                    </div>
+
+                    <div class="department-category">
+                        <h3 class="category-title">检查类</h3>
+                        <div class="department-list">
+                            <button class="btn-department" onclick="showDepartmentDetail('妇科彩超室')">妇科彩超室</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('检验科')">检验科</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('操作治疗区(抽血、换药、注射、雾化)')">操作治疗区(抽血、换药、注射、雾化)</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('心电图')">心电图</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('放射科检查(DR、CT、MRI)')">放射科检查(DR、CT、MRI)</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('彩超检查')">彩超检查</button>
+                        </div>
+                    </div>
+
+                    <div class="department-category">
+                        <h3 class="category-title">其他</h3>
+                        <div class="department-list">
+                            <button class="btn-department" onclick="showDepartmentDetail('自助取号处')">自助取号处</button>
+                            <button class="btn-department" onclick="showDepartmentDetail('中西药房')">中西药房</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- 深圳市第二人民医院科室 -->
             <div id="hospital1" class="hospital-departments" style="display: none;">
                 <div class="card">
